# axum-http-service

./: Cargo.toml  README.md  demo.sh
src/: lib.rs  main.rs  metrics_state.rs
src/handlers/: health.rs
src/middleware/: metrics.rs  mod.rs  rate_limit.rs  request_id.rs
static/: app.js  index.html
